// Vitest Snapshot v1

exports[`List Row > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root HvTable-listRow css-1gvkbh-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head HvTableRow-variantListHead css-17i5vyy-StyledTableRow e1cjstvf0"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-9wl04c-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-kcxyuh-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 css-lf7uy0-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-9wl04c-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-kcxyuh-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 css-lf7uy0-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-9wl04c-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-kcxyuh-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 css-lf7uy0-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-19t8tz7-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-19t8tz7-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-19t8tz7-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-19t8tz7-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-19t8tz7-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-19t8tz7-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body HvTableCell-variantList css-2j35fu-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Simple Table > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root css-1rpuws7-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head css-1bp5wrp-StyledTableRow e1cjstvf0"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head css-11yxkke-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-kcxyuh-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 css-lf7uy0-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-11yxkke-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-kcxyuh-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 css-lf7uy0-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-11yxkke-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-kcxyuh-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 css-lf7uy0-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="grid HvTableRow-root HvTableRow-body css-1ysyzq8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-1ysyzq8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-1ysyzq8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-1ysyzq8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-1ysyzq8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-1ysyzq8-StyledTableRow e1cjstvf0"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-rbko69-StyledTableCell e8848lx0"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
